# suricata-zabbix

./: Cargo.toml  README.md  test.sh  zabbix.yaml
output/: ndpi.pcap.json
src/: detect.rs  lib.rs  log.rs  plugin.rs  suricata.rs  zabbix.rs
